--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.11
+
 WORKDIR /usr/src/app
+
 COPY requirements.txt ./
+
 RUN pip install -r requirements.txt
-CMD python run.py
+
+CMD python src/run.py
