--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-python-telegram-bot==20.5
-pymysql==1.1.0
-peewee==3.16.3
+anyio==4.9.0
+certifi==2025.7.9
+cffi==1.17.1
 cryptography==41.0.3
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+idna==3.10
+peewee==3.16.3
+pycparser==2.22
+PyMySQL==1.1.0
+python-dotenv==1.1.1
+python-telegram-bot==20.5
+sniffio==1.3.1
+typing_extensions==4.14.1
