--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,24 +10,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-#
-#      - name: Install SSH key
-#        uses: shimataro/ssh-key-action@v2
-#        with:
-#          key: ${{ secrets.VPS_SSH_KEY }}
-#          known_hosts: ${{ secrets.VPS_KNOWN_HOSTS }}
-#
-#      - name: Debug SSH connection
-#        run: |
-#          echo "Пытаемся подключиться к серверу..."
-#          ssh -vvv -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "whoami"
+
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.VPS_SSH_KEY }}
+          known_hosts: ${{ secrets.VPS_KNOWN_HOSTS }}
 
       - name: Deploy via SSH
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/id_github_actions
-          echo "${{ secrets.VPS_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/id_github_actions
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
             cd ~/VosyanBot &&
             git pull origin main &&
