--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
             cd ~/VosyanBot &&
             git pull origin main &&
-            pip install -r requirements.txt
+            pip install -r requirements.txt &&
+            sudo systemctl daemon-reload &&
+            sudo systemctl restart vosyan_bot
           "
