--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 anyio==4.9.0
 certifi==2025.7.9
 cffi==1.17.1
+click==8.2.1
 cryptography==41.0.3
+debugpy==1.8.14
 h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
 idna==3.10
+markdown-it-py==3.0.0
+mdurl==0.1.2
 peewee==3.16.3
 pycparser==2.22
+Pygments==2.19.2
 PyMySQL==1.1.0
 python-dotenv==1.1.1
 python-telegram-bot==20.5
+rich==14.0.0
+shellingham==1.5.4
 sniffio==1.3.1
+typer==0.16.0
 typing_extensions==4.14.1
