Добавить команды работы с событием

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11
+FROM python:3.12
 
 WORKDIR /usr/src/app
 
@@ -6,4 +6,4 @@ COPY requirements.txt ./
 
 RUN pip install -r requirements.txt
 
-CMD python src/run.py
+CMD python cli.py sleep
