--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyio==4.9.0
 certifi==2025.7.9
 cffi==1.17.1
 click==8.2.1
+colorama==0.4.6
 cryptography==41.0.3
 debugpy==1.8.14
 h11==0.14.0
@@ -11,6 +12,7 @@ idna==3.10
 markdown-it-py==3.0.0
 mdurl==0.1.2
 peewee==3.16.3
+peewee-db-evolve==3.7.6
 pycparser==2.22
 Pygments==2.19.2
 PyMySQL==1.1.0
