--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,28 @@
 name: Deploy to VPS
 
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.VPS_SSH_KEY }}
-          known_hosts: ${{ secrets.VPS_KNOWN_HOSTS }}
-
-      - name: Deploy via SSH
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            cd ~/VosyanBot &&
-            git pull origin main &&
-            pip install -r requirements.txt &&
-            sudo systemctl daemon-reload &&
-            sudo systemctl restart vosyan_bot
-          "
+#on:
+#  push:
+#    branches: [ main ]
+#
+#jobs:
+#  deploy:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Install SSH key
+#        uses: shimataro/ssh-key-action@v2
+#        with:
+#          key: ${{ secrets.VPS_SSH_KEY }}
+#          known_hosts: ${{ secrets.VPS_KNOWN_HOSTS }}
+#
+#      - name: Deploy via SSH
+#        run: |
+#          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+#            cd ~/VosyanBot &&
+#            git pull origin main &&
+#            pip install -r requirements.txt &&
+#            sudo systemctl daemon-reload &&
+#            sudo systemctl restart vosyan_bot
+#          "
