Исправить образ для разработки

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.12
 
 WORKDIR /usr/src/app
 
-COPY requirements.txt ./
+COPY requirements_test.txt requirements.txt ./
 
-RUN pip install -r requirements.txt
+RUN pip install -r requirements_test.txt
 
 CMD python cli.py sleep
