--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.2.1
 colorama==0.4.6
 cryptography==41.0.3
 debugpy==1.8.14
+dependency-injector==4.48.1
 h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
