Провести крупный рефакторинг
- Добавить DI
- На основе DI изменить зависимости в классах
- Переделать CLI команды

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
       context: .
       dockerfile: ./docker/Dockerfile
     image: app
+    command: ["python", "-m", "src.cli", "sleep"]
     volumes:
       - ./:/usr/src/app
     env_file:
