--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "shellingham (==1.5.4)",
     "sniffio (==1.3.1)",
     "typer (==0.16.0)",
-    "typing-extensions (==4.14.1)"
+    "typing-extensions (==4.14.1)",
+    "dependency-injector (>=4.48.2,<5.0.0)"
 ]
 
 
