--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,22 @@
-anyio==4.9.0
-certifi==2025.7.9
-cffi==1.17.1
-click==8.2.1
-colorama==0.4.6
-cryptography==41.0.3
-debugpy==1.8.14
-dependency-injector==4.48.2
-h11==0.14.0
-httpcore==0.17.3
-httpx==0.24.1
-idna==3.10
-markdown-it-py==3.0.0
-mdurl==0.1.2
-peewee==3.16.3
-peewee-db-evolve==3.7.6
-pycparser==2.22
-Pygments==2.19.2
-PyMySQL==1.1.0
-python-dotenv==1.1.1
-python-telegram-bot==20.5
-rich==14.0.0
-shellingham==1.5.4
-sniffio==1.3.1
-typer==0.16.0
-typing_extensions==4.14.1
+anyio==4.9.0 ; python_version >= "3.12"
+certifi==2025.7.9 ; python_version >= "3.12"
+click==8.2.1 ; python_version >= "3.12"
+colorama==0.4.6 ; python_version >= "3.12"
+dependency-injector==4.48.3 ; python_version >= "3.12"
+h11==0.16.0 ; python_version >= "3.12"
+httpcore==1.0.9 ; python_version >= "3.12"
+httpx==0.28.1 ; python_version >= "3.12"
+idna==3.10 ; python_version >= "3.12"
+markdown-it-py==3.0.0 ; python_version >= "3.12"
+mdurl==0.1.2 ; python_version >= "3.12"
+peewee-db-evolve==3.7.6 ; python_version >= "3.12"
+peewee==3.16.3 ; python_version >= "3.12"
+pygments==2.19.2 ; python_version >= "3.12"
+pymysql==1.1.1 ; python_version >= "3.12"
+python-dotenv==1.1.1 ; python_version >= "3.12"
+python-telegram-bot==22.5 ; python_version >= "3.12"
+rich==14.0.0 ; python_version >= "3.12"
+shellingham==1.5.4 ; python_version >= "3.12"
+sniffio==1.3.1 ; python_version >= "3.12"
+typer==0.16.0 ; python_version >= "3.12"
+typing-extensions==4.14.1 ; python_version >= "3.12"
