--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,4 +1,8 @@
--r requirements.txt
-
-pytest==8.4.1
-pytest-asyncio==1.1.0
+colorama==0.4.6 ; python_version >= "3.12" and sys_platform == "win32"
+iniconfig==2.3.0 ; python_version >= "3.12"
+packaging==25.0 ; python_version >= "3.12"
+pluggy==1.6.0 ; python_version >= "3.12"
+pygments==2.19.2 ; python_version >= "3.12"
+pytest-asyncio==1.3.0 ; python_version >= "3.12"
+pytest==8.4.2 ; python_version >= "3.12"
+typing-extensions==4.14.1 ; python_version >= "3.12"
